# PacketIO

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: deserializer.hpp  framed_packet_reader.hpp  packet_buffers.hpp  packet_io.hpp  packet_reader.hpp  packet_writer.hpp
src/: main.cpp  packet_buffers.cpp  packet_reader.cpp  packet_writer.cpp
